// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findRulesForElements should include both full and partial matches when options.includePartialMatches is true 1`] = `
Object {
  "matches": Array [
    Object {
      "isPartialMatch": false,
      "selector": Array [
        Array [
          "",
          "div.container",
        ],
        Array [
          "ul",
          "",
        ],
      ],
    },
    Object {
      "isPartialMatch": true,
      "selector": Array [
        Array [
          "ul",
          "",
        ],
        Array [
          "section",
          "div",
        ],
      ],
    },
  ],
}
`;

exports[`findRulesForElements should include matching children when options.recursive is true 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "matches": Array [],
    },
    Object {
      "children": Array [],
      "matches": Array [
        Object {
          "isPartialMatch": true,
          "selector": Array [
            Array [
              "section",
              "div > .child-2",
            ],
          ],
        },
      ],
    },
    Object {
      "children": Array [],
      "matches": Array [],
    },
  ],
  "matches": Array [
    Object {
      "isPartialMatch": true,
      "selector": Array [
        Array [
          ".absent-parent >",
          "div",
        ],
      ],
    },
  ],
}
`;

exports[`findRulesForElements should include the html property when options.includeHtml === true 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "html": "<div class=\\"child-1\\">",
      "matches": Array [],
    },
    Object {
      "children": Array [],
      "html": "<div class=\\"child-2\\">",
      "matches": Array [],
    },
    Object {
      "children": Array [],
      "html": "<div class=\\"child-3\\">",
      "matches": Array [],
    },
  ],
  "html": "<div class=\\"container\\">",
  "matches": Array [],
}
`;

exports[`findRulesForElements should respect options.includePartialMatches and options.recursive when they are false 1`] = `
Object {
  "matches": Array [
    Object {
      "selector": Array [
        Array [
          "",
          "div",
        ],
        Array [
          "ul",
          "",
        ],
      ],
    },
  ],
}
`;
